--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
   test:
     name: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         lisp:
         - sbcl-bin
@@ -35,6 +36,7 @@ jobs:
 
     - name: Install Windows dependencies
       if: matrix.os == 'windows-latest'
+      shell: bash -l {0}
       run: |
         git config --global core.autocrlf false
         conda install -c conda-forge m2w64-gcc m2w64-zeromq
