--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         git config --global core.autocrlf false
         conda install -c conda-forge m2w64-gcc m2w64-zeromq
         curl -L http://downloads.sourceforge.net/project/sbcl/sbcl/2.0.0/sbcl-2.0.0-x86-64-windows-binary.msi --output sbcl.msi
-        msiexec /i sbcl.msi /quiet
+        msiexec /qn /i sbcl.msi
 
     - name: Install Ubuntu dependencies
       if: matrix.os == 'ubuntu-latest'
