--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: bash -l {0}
       run: |
-        conda install -c conda-forge jupyterlab
+        conda install -c conda-forge jupyterlab jupyter_kernel_test
         jupyter --version
 
     - name: Checkout repository
