--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,8 +79,7 @@ jobs:
       run: |
         git clone https://github.com/yitzchak/shasht.git ~/quicklisp/local-projects/shasht
 
-    - name: Install SBCL kernel via system
-      if: matrix.os != 'windows-latest'
+    - name: Install SBCL kernel
       run: |
         sbcl --non-interactive --load scripts/usr-install.lisp sbcl
 
