--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     defaults:
       run:
-        shell: bash
+        shell: bash -l {0}
 
     strategy:
       fail-fast: false
@@ -34,7 +34,6 @@ jobs:
 
     - name: Install Windows dependencies
       if: matrix.os == 'windows-latest'
-      shell: bash -l {0}
       run: |
         git config --global core.autocrlf false
         conda install -c conda-forge m2w64-gcc m2w64-zeromq
@@ -58,15 +57,9 @@ jobs:
       run: |
         brew install clozure-cl czmq sbcl
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
     - name: Install Jupyter
       run: |
-        pip install --upgrade pip setuptools wheel jupyter jupyter_kernel_test
-        jupyter --version
+        conda install -c conda-forge jupyterlab jupyter_kernel_test
 
     - name: Checkout repository
       uses: actions/checkout@v2
