--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,26 +63,16 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Download Quicklisp
+    - name: Download Quicklisp and setup source registry
       run: |
         curl -kLO https://beta.quicklisp.org/quicklisp.lisp
-
-    - name: Setup source registry on Windows
-      if: matrix.os == 'windows-latest'
-      run: |
-        mkdir -p $LOCALAPPDATA/common-lisp
-        echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$LOCALAPPDATA/common-lisp/source-registry.conf
-
-    - name: Setup source registry on Unix
-      if: matrix.os != 'windows-latest'
-      run: |
-        mkdir -p $HOME/.config/common-lisp
-        echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$HOME/.config/common-lisp/source-registry.conf
+        mkdir -p $HOME/common-lisp
+        echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$HOME/common-lisp/source-registry.conf
 
     - name: Clone dependencies that have not been updated in Quicklisp
       run: |
         git clone https://github.com/yitzchak/shasht.git ~/quicklisp/local-projects/shasht
-        git clone https://github.com/Shinmera/language-codes.git ~/quicklisp/local-projects/language-codes
+        git clone -b fix-utf-8 https://github.com/yitzchak/language-codes.git ~/quicklisp/local-projects/language-codes
 
     - name: Install SBCL kernel
       run: |
