--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
         mkdir -p $LOCALAPPDATA/config/common-lisp
         echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$LOCALAPPDATA/config/common-lisp/source-registry.conf
         ls -la $LOCALAPPDATA
+        sbcl --non-interactive --eval "(write-line (uiop:xdg-config-pathname))" --eval "(write-line (uiop:xdg-config-pathname \"common-lisp\"))"  --eval "(write-line (uiop:xdg-config-pathname \"common-lisp/source-registry.conf\"))"
 
     - name: Setup source registry on Unix
       if: matrix.os != 'windows-latest'
