--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
     - name: Install SBCL kernel
       run: |
         sbcl --non-interactive --load scripts/usr-install.lisp sbcl
-        sbcl --non-interactive --eval "(write-line (uiop:xdg-config-pathname))" --eval "(write-line (uiop:xdg-config-pathname \"common-lisp\"))"  --eval "(write-line (uiop:xdg-config-pathname \"common-lisp/source-registry.conf\"))"
+        sbcl --non-interactive --eval "(format t "~A; ~A; ~A~%" (uiop:xdg-config-pathname) (uiop:xdg-config-pathname \"common-lisp\") (uiop:xdg-config-pathname \"common-lisp/source-registry.conf\"))"
 
     - name: Install CCL kernel
       if: matrix.os == 'macos-latest'
