--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,25 +62,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Download Quicklisp
+    - name: Download Quicklisp, setup source registry, and clone dependencies that have not been updated in Quicklisp
       run: |
         curl -kLO https://beta.quicklisp.org/quicklisp.lisp
-
-    - name: Setup source registry on Windows
-      if: matrix.os == 'windows-latest'
-      run: |
-        mkdir -p $LOCALAPPDATA/config/common-lisp
-        echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$LOCALAPPDATA/config/common-lisp/source-registry.conf
-        ls -la $LOCALAPPDATA
-
-    - name: Setup source registry on Unix
-      if: matrix.os != 'windows-latest'
-      run: |
-        mkdir -p $HOME/.config/common-lisp
-        echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$HOME/.config/common-lisp/source-registry.conf
-
-    - name: Clone dependencies that have not been updated in Quicklisp
-      run: |
+        echo "CL_SOURCE_REGISTRY=\"$PWD:\" >> $GITHUB_ENV
         git clone https://github.com/yitzchak/shasht.git ~/quicklisp/local-projects/shasht
         git clone -b fix-utf-8 https://github.com/yitzchak/language-codes.git ~/quicklisp/local-projects/language-codes
 
