--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,17 +62,18 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Download Quicklisp, setup source registry, and clone dependencies that have not been updated in Quicklisp
+    - name: Download Quicklisp
       run: |
         curl -kLO https://beta.quicklisp.org/quicklisp.lisp
-        echo "CL_SOURCE_REGISTRY=\"$PWD:\"" >> $GITHUB_ENV
+
+    - name: Clone dependencies that have not been updated in Quicklisp
+      run: |
         git clone https://github.com/yitzchak/shasht.git ~/quicklisp/local-projects/shasht
         git clone -b fix-utf-8 https://github.com/yitzchak/language-codes.git ~/quicklisp/local-projects/language-codes
 
     - name: Install SBCL kernel
       run: |
         sbcl --non-interactive --load scripts/usr-install.lisp sbcl
-        sbcl --non-interactive --eval "(format t \"~A; ~A; ~A~%\" (uiop:xdg-config-pathname) (uiop:xdg-config-pathname \"common-lisp\") (uiop:xdg-config-pathname \"common-lisp/source-registry.conf\"))"
 
     - name: Install CCL kernel
       if: matrix.os == 'macos-latest'
