--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,28 +7,43 @@ on:
     branches: [ master ]
   pull_request:
 
-defaults:
-  run:
-    shell: bash
-
 jobs:
   test:
     name: ${{ matrix.os }}
+
+    defaults:
+      run:
+        shell: bash -l {0}
+
     strategy:
+      fail-fast: false
       matrix:
         os:
         - macos-latest
         - ubuntu-latest
+        - windows-latest
 
     # run the job on every combination of "os" above
     runs-on: ${{ matrix.os }}
 
     steps:
-    # tell git not to convert line endings
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+
     - name: Install Windows dependencies
       if: matrix.os == 'windows-latest'
       run: |
-        git config --global core.autocrlf false
+        conda install -c conda-forge m2w64-gcc m2w64-zeromq
+        echo "C:\\Program Files\\Steel Bank Common Lisp\\2.0.0\\" >> $GITHUB_PATH
+        echo "SBCL_HOME=C:\\Program Files\\Steel Bank Common Lisp\\2.0.0\\" >> $GITHUB_ENV
+
+    - name: Install Windows dependencies (pt 2)
+      if: matrix.os == 'windows-latest'
+      shell: cmd
+      run: |
+        curl -L http://downloads.sourceforge.net/project/sbcl/sbcl/2.0.0/sbcl-2.0.0-x86-64-windows-binary.msi --output sbcl.msi
+        msiexec /qn /i sbcl.msi
 
     - name: Install Ubuntu dependencies
       if: matrix.os == 'ubuntu-latest'
@@ -40,28 +55,26 @@ jobs:
       run: |
         brew install clozure-cl czmq sbcl
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
     - name: Install Jupyter
       run: |
-        pip install --upgrade pip setuptools wheel jupyter jupyter_kernel_test
-        jupyter --version
+        conda install -c conda-forge jupyterlab jupyter_kernel_test
 
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Download Quicklisp and setup source registry
+    - name: Download Quicklisp
       run: |
         curl -kLO https://beta.quicklisp.org/quicklisp.lisp
-        mkdir -p $HOME/.config/common-lisp
-        echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$HOME/.config/common-lisp/source-registry.conf
 
-    - name: Clone shasht (only need when Quicklisp is out of date)
+    - name: Clone dependencies that have not been updated in Quicklisp
       run: |
         git clone https://github.com/yitzchak/shasht.git ~/quicklisp/local-projects/shasht
+        git clone -b fix-utf-8 https://github.com/yitzchak/language-codes.git ~/quicklisp/local-projects/language-codes
+
+    - name: Clone dependencies that have not been updated in Quicklisp (pt 2)
+      if: matrix.os == 'windows-latest'
+      run: |
+        git clone https://github.com/orivej/pzmq.git ~/quicklisp/local-projects/pzmq
 
     - name: Install SBCL kernel
       run: |
