--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,9 +48,9 @@ jobs:
     - name: Install Ubuntu dependencies
       if: matrix.os == 'ubuntu-latest'
       run: |
-        sudo apt-get install ecl libzmq3-dev sbcl
+        sudo apt-get install -y ecl libzmq3-dev sbcl
         curl -L https://github.com/yitzchak/dur/releases/download/cmucl_21d-1/cmucl_21d-1_amd64.deb --output cmucl_21d-1_amd64.deb
-        sudo dpkg -i cmucl_21d-1_amd64.deb
+        sudo apt-get install -y ./cmucl_21d-1_amd64.deb
 
     - name: Install MacOS dependencies
       if: matrix.os == 'macos-latest'
