Remove ccl on ubuntu

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,6 @@ jobs:
         sudo dpkg --add-architecture i386
         sudo apt-get update
         sudo apt-get install -y ecl libzmq3-dev libzmq3-dev:i386 sbcl
-        curl -L https://github.com/yitzchak/mpr/releases/download/ccl_1.12.1-1/ccl_1.12.1-1_amd64_ubuntu_focal.deb --output ccl.deb
-        sudo apt-get install -y ./ccl.deb
         sudo bash -c "$(curl -fsSL https://www.thirdlaw.tech/pkg/clasp.sh)"
 
     - name: Install MacOS dependencies
@@ -94,10 +92,10 @@ jobs:
       run: |
         ccl64 --batch --load scripts/usr-install.lisp
 
-    - name: Install CCL kernel on Ubuntu
-      if: matrix.os == 'ubuntu-22.04'
-      run: |
-        ccl --batch --load scripts/usr-install.lisp
+    # - name: Install CCL kernel on Ubuntu
+    #   if: matrix.os == 'ubuntu-22.04'
+    #   run: |
+    #     ccl --batch --load scripts/usr-install.lisp
 
     - name: Install CLASP kernel
       if: matrix.os == 'ubuntu-22.04'
