--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
     - name: Install CLASP kernel
       if: matrix.os != 'windows-latest'
       run: |
-        iclasp-boehmprecise --non-interactive --load scripts/usr-install.lisp
+        iclasp --non-interactive --load scripts/usr-install.lisp
 
     - name: Install ECL kernel
       if: matrix.os != 'windows-latest'
