--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
-system-index.txt
+*.FASL
+*.d64fsl
+*.dfsl
+*.dx32fsl
+*.dx64fsl
+*.fasl
+*.fx32fsl
+*.fx64fsl
+*.lisp-temp
+*.log
+*.lx32fsl
+*.lx64fsl
+*.p64fsl
+*.pfsl
+*.sx32fsl
+*.sx64fsl
+*.tgz
+*.tgz
+*.wx32fsl
+*.wx64fsl
 .ipynb_checkpoints
 __pycache__
+dist
+js
+lib/
+node_modules
+package-lock.json
+system-index.txt
+tsconfig.tsbuildinfo
+yarn.lock
