--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        pacman -Syu --noconfirm jupyterlab python-build
+        pacman -Syu --noconfirm jupyterlab python-build python-pip
 
     - name: Install pytest-jupyter_kernel
       run: |
